--- a/project-Noticias/styles.css
+++ b/project-Noticias/styles.css
@@ -48,3 +48,27 @@ h1 {
     -webkit-background-clip: text;
     color: transparent;
 }
+
+.tabla-contenedor {
+    border: 1px solid black;
+    align-items:  center;
+    justify-content: center;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.tabla-contenedor th {
+    color: white;
+    background-color: black;
+    padding: 10px;
+
+}
+
+.tabla-contenedor td{
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    padding: 8px;
+    border-bottom: 1px solid black;
+}
