--- a/project-Noticias/styles3.css
+++ b/project-Noticias/styles3.css
@@ -73,8 +73,28 @@ h1 {
     border-bottom: 1px solid black;
 }
 
-.clearfix::after{
-    content: "";
+.noticia-container {
+    width: 80%; 
+    margin: 0 auto; 
+    border: 10px solid black; 
+    padding: 20px; 
+    overflow-x: auto; 
+    white-space: nowrap;
+}
+
+.español {
+    width: 50%;
+    float: left;
+}
+
+.ingles {
+    width: 50%;
+    float: right;
     clear: both;
+}
+
+.clearfix::after {
+    content: "";
     display: table;
+    clear: both;
 }
