--- a/project-Noticias/noticia5.css
+++ b/project-Noticias/noticia5.css
@@ -1,8 +1,8 @@
-
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Sofia';
+    font-size: 20px;
 }
 
 
@@ -34,19 +34,19 @@ body {
     background-color: #f4f4f4;
     padding: 20px;
     box-sizing: border-box;
-    height: calc(100vh - 80px); 
-    overflow-y: auto; 
+    height: calc(100vh - 80px);
+    overflow-y: auto;
 }
 
 
 .contenedor {
-    margin-top: 60px; 
-    margin-bottom: 60px; 
-    margin-left: 220px; 
+    margin-top: 60px;
+    margin-bottom: 60px;
+    margin-left: 220px;
     padding: 20px;
     box-sizing: border-box;
-    max-height: calc(100vh - 120px); 
-    overflow-y: auto; 
+    max-height: calc(100vh - 120px);
+    overflow-y: auto;
 }
 
 
